--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>goonr</title>
+    <meta charset="utf-8" />
+    <title>Goonr Frontend</title>
 </head>
 <body>
-
+<main></main>
+<script type="module">import init from './pkg/frontend.js'; init();</script>
 </body>
 </html>
