Add CSS stuff for frontend and create separate renderer crate for render logic

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <title>Goonr Frontend</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.1/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles/output.css">
 </head>
 <body>
 <main></main>
-<script type="module">import init from './pkg/frontend.js'; init();</script>
 </body>
 </html>
